// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render RequestsModal component should match snapshot 1`] = `
<form
  className="editor__editor-form"
  id="form-id"
  onSubmit={[Function]}
>
  <Editor
    init={
      Object {
        "branding": false,
        "menubar": false,
        "plugins": "lists",
        "skin": "lightgray",
        "statusbar": false,
        "toolbar": "bold italic underline   numlist bullist   outdent indent",
      }
    }
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyUp={[Function]}
    value="<p style=\\"color:#999999; font-size: 15px;	font-family: DIN Pro;	line-height: 20px; text-align: left; margin: 0;\\">Write a comment</p>"
  />
  <div
    className="editor__btn-size"
  >
    <span
      className="editor__btn-wrap"
    >
      <button
        className="editor__post-btn editor__post-btn post-btn-text"
        type="submit"
      >
        Post
      </button>
    </span>
  </div>
</form>
`;

exports[`Render RequestsModal component should render the onSubmit button works as exepected 1`] = `
<form
  className="editor__editor-form"
  id="form-id"
  onSubmit={[Function]}
>
  <textarea
    id="tiny-react_38118455141535719838953"
    style={
      Object {
        "visibility": "hidden",
      }
    }
  />
  <div
    className="editor__btn-size"
  >
    <span
      className="editor__btn-wrap"
    >
      <button
        className="editor__post-btn editor__post-btn post-btn-text"
        type="submit"
      >
        Post
      </button>
    </span>
  </div>
</form>
`;
